# revm

bins/revm-test/: CHANGELOG.md  Cargo.toml
bins/revme/: CHANGELOG.md
crates/interpreter/: CHANGELOG.md
crates/interpreter/src/gas/: calc.rs
crates/precompile/: CHANGELOG.md
crates/primitives/: CHANGELOG.md  Cargo.toml
crates/primitives/src/: lib.rs  state.rs
crates/primitives/src/irys/: commitment.rs  dest_hash.rs  genesis.rs  last_tx.rs  new_account.rs  payload.rs  shadow.rs
crates/revm/: CHANGELOG.md  Cargo.toml
crates/revm/src/: journaled_state.rs
crates/revm/src/context/: inner_evm_context.rs
crates/revm/src/db/: in_memory_db.rs
