[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "revm primitives"
edition = "2021"
keywords = ["ethereum", "evm", "no_std", "revm", "types"]
license = "MIT"
name = "revm-primitives"
readme = "../../README.md"
repository = "https://github.com/bluealloy/revm"
version = "10.0.0"
readme = "../../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "deny"
unreachable_pub = "warn"
unused_must_use = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
# alloy
alloy-eip2930 = { version = "0.1", default-features = false }
alloy-eip7702 = { version = "0.1", default-features = false, features = [
    "k256",
] }
alloy-primitives = { version = "0.8.5", default-features = false, features = [
    "rlp",
    "map",
] }

# mics
auto_impl = "1.2"
bitvec = { version = "1", default-features = false, features = ["alloc"] }
bitflags = { version = "2.6.0", default-features = false }

# For setting the CfgEnv KZGSettings. Enabled by c-kzg flag.
c-kzg = { version = "1.0.3", default-features = false, optional = true, features = [
    "ethereum_kzg_settings",
] }

# Optionally use `kzg-rs` for a pure Rust implementation of KZG.
kzg-rs = { version = "0.2.3", default-features = false, optional = true }

#alloy
alloy-eips = { git = "https://github.com/alloy-rs/alloy", default-features = false, rev = "64feb9b" }
# alloy-serde = { path = "../../../alloy/crates/serde" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "64feb9b" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "64feb9b" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "64feb9b" }

# alloy-eips = { path = "../../../alloy/crates/eips", default-features = false }
# alloy-rpc-types = { path = "../../../alloy/crates/rpc-types" }
# alloy-serde = { path = "../../../alloy/crates/serde" }


alloy-rlp = "0.3.4"

# utility
enumn = "0.1"
cfg-if = "1"
derive_more = { version = "0.99", optional = true }
dyn-clone = "1.0"
enumn = "0.1"

reth-codecs = { path = "../../../reth/crates/storage/codecs" }

# optional


arbitrary = "1.3.2"
bytes = "1.6.0"
modular-bitfield = "0.11.2"
proptest = "1.4.0"
proptest-derive = "0.4.0"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "rc",
], optional = true }
thiserror = "1.0.61"
[build-dependencies]
hex = { version = "0.4", default-features = false }

[features]
default = ["std", "c-kzg", "portable"]
std = [
    "serde?/std",
    "alloy-primitives/std",
    "hex/std",
    "bitvec/std",
    "bitflags/std",
    "alloy-eip7702/std",
    "alloy-eip2930/std",
]
hashbrown = ["alloy-primitives/map-hashbrown"]
serde = [
    "dep:serde",
    "alloy-primitives/serde",
    "hex/serde",
    "bitvec/serde",
    "bitflags/serde",
    "c-kzg?/serde",
    "alloy-eip7702/serde",
    "alloy-eip2930/serde",
]
arbitrary = [
    "std",
    "alloy-primitives/arbitrary",
    "bitflags/arbitrary",
    "alloy-eip7702/arbitrary",
    "alloy-eip2930/arbitrary",
]
asm-keccak = ["alloy-primitives/asm-keccak"]
default = ["c-kzg", "portable", "std"]
hashbrown = []
portable = ["c-kzg?/portable"]
serde = [
    "alloy-primitives/serde",
    "bitflags/serde",
    "bitvec/serde",
    "c-kzg?/serde",
    "dep:serde",
    "hashbrown/serde",
    "hex/serde",
]
std = [
    "alloy-primitives/std",
    "bitflags/std",
    "bitvec/std",
    "hex/std",
    "serde?/std",
]

optimism = []
# Optimism default handler enabled Optimism handler register by default in EvmBuilder.
negate-optimism-default-handler = []
optimism-default-handler = ["optimism"]

dev = [
    "memory_limit",
    "optional_balance_check",
    "optional_beneficiary_reward",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_gas_refund",
    "optional_no_base_fee",
]
memory_limit = []
optional_balance_check = []
optional_beneficiary_reward = []
optional_block_gas_limit = []
optional_eip3607 = []
optional_gas_refund = []
optional_no_base_fee = []
rand = ["alloy-primitives/rand"]

# See comments in `revm-precompile`
c-kzg = ["dep:c-kzg"]
# `kzg-rs` is not audited but useful for `no_std` environment.
#   use it with causing and default to `c-kzg` if possible!
kzg-rs = ["dep:kzg-rs"]
