[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "revm - Rust Ethereum Virtual Machine"
edition = "2021"
keywords = ["ethereum", "evm", "no_std", "revm"]
license = "MIT"
name = "revm"
readme = "../../README.md"
repository = "https://github.com/bluealloy/revm"
version = "14.0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "deny"
unreachable_pub = "warn"
unused_must_use = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
# revm
revm-interpreter = { path = "../interpreter", version = "10.0.3", default-features = false }
revm-precompile = { path = "../precompile", version = "11.0.3", default-features = false }

irys-primitives = { path = "../../../../crates/primitives" }
# misc
auto_impl = { version = "1.2", default-features = false }
cfg-if = "1.0"
dyn-clone = "1.0"

# Optional
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "rc",
], optional = true }
serde_json = { version = "1.0", default-features = false, features = [
    "alloc",
], optional = true }

# ethersdb
ethers-core = { version = "2.0", optional = true }
ethers-providers = { version = "2.0", optional = true }
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
], optional = true }

# alloydb
alloy-eips = { version = "0.3", optional = true, default-features = false }
alloy-provider = { version = "0.3", optional = true, default-features = false }
alloy-transport = { version = "0.3", optional = true, default-features = false }

[dev-dependencies]
alloy-sol-types = { version = "0.8.2", default-features = false, features = [
    "std",
] }
anyhow = "1.0.87"
criterion = "0.5"
ethers-contract = { version = "2.0.14", default-features = false }
indicatif = "0.17"
reqwest = { version = "0.12" }
rstest = "0.22.0"

alloy-provider = "0.3"

[features]
arbitrary = ["revm-interpreter/arbitrary"]
asm-keccak = ["revm-interpreter/asm-keccak", "revm-precompile/asm-keccak"]
default = ["blst", "c-kzg", "portable", "secp256k1", "std"]
hashbrown = ["revm-interpreter/hashbrown", "revm-precompile/hashbrown"]
portable = ["revm-interpreter/portable", "revm-precompile/portable"]
serde = ["dep:serde", "revm-interpreter/serde"]
serde-json = ["dep:serde_json", "serde"]
std = [
    "revm-interpreter/std",
    "revm-precompile/std",
    "serde?/std",
    "serde_json?/preserve_order",
    "serde_json?/std",
]

test-utils = []

optimism = ["revm-interpreter/optimism", "revm-precompile/optimism"]
# Optimism default handler enabled Optimism handler register by default in EvmBuilder.
negate-optimism-default-handler = [
    "revm-interpreter/negate-optimism-default-handler",
    "revm-precompile/negate-optimism-default-handler",
]
optimism-default-handler = [
    "optimism",
    "revm-interpreter/optimism-default-handler",
    "revm-precompile/optimism-default-handler",
]

ethersdb = ["dep:ethers-core", "dep:ethers-providers", "dep:tokio", "std"]

alloydb = [
    "dep:alloy-eips",
    "dep:alloy-provider",
    "dep:alloy-transport",
    "dep:tokio",
    "std",
]

dev = [
    "memory_limit",
    "optional_balance_check",
    "optional_beneficiary_reward",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_gas_refund",
    "optional_no_base_fee",
]
memory_limit = ["revm-interpreter/memory_limit"]
optional_balance_check = ["revm-interpreter/optional_balance_check"]
optional_beneficiary_reward = ["revm-interpreter/optional_beneficiary_reward"]
optional_block_gas_limit = ["revm-interpreter/optional_block_gas_limit"]
optional_eip3607 = ["revm-interpreter/optional_eip3607"]
optional_gas_refund = ["revm-interpreter/optional_gas_refund"]
optional_no_base_fee = ["revm-interpreter/optional_no_base_fee"]

# See comments in `revm-precompile`
c-kzg = ["revm-precompile/c-kzg"]
secp256k1 = ["revm-precompile/secp256k1"]
# `kzg-rs` is not audited but useful for `no_std` environment, use it with causing and default to `c-kzg` if possible.
blst = ["revm-precompile/blst"]
kzg-rs = ["revm-precompile/kzg-rs"]

[[example]]
name = "fork_ref_transact"
path = "../../examples/fork_ref_transact.rs"
required-features = ["ethersdb"]

[[example]]
name = "generate_block_traces"
path = "../../examples/generate_block_traces.rs"
required-features = ["ethersdb", "serde-json", "std"]

[[example]]
name = "db_by_ref"
path = "../../examples/db_by_ref.rs"
required-features = ["serde-json", "std"]

#[[example]]
#name = "uniswap_v2_usdc_swap"
#path = "../../examples/uniswap_v2_usdc_swap.rs"
#required-features = ["alloydb"]

[[bench]]
harness = false
name = "bench"
path = "benches/bench.rs"
